# startkladde

./: .Makefile.swp  .cproject  .gitignore  .gitmodules  .project  BUILDING.md  CHANGES  CMakeLists.txt  ChaneLog  ChangeLog  INSTALL  Makefile  README  README.md  TODO  TODO.txt  Vagrantfile  changelog.txt  install.txt  kvkbd.xpm  logo.xpm  migration.txt  netztest_xterm  sk.bat  sk_admin.pro  sk_web.pro  startkladde.conf  startkladde.desktop  startkladde.pro  startkladde.qrc  startkladde.rc  tests.pro
client/scripts/: _xsession  abschiesser  init-startkladde  netztest  startkladde-down  startkladde_wrapper  tunnel  update
cmake/: FindMySQL.cmake  generateSvnHeader.cmake
config/: debian_menu  startkladde.desktop  startkladde.qrc
doc/: TODO.txt  changelog.txt  cmdline.txt  compile.txt  config.txt  csv.txt  format_plugins.txt  hotkeys.txt  i18n.txt  keyboard_shortcuts.txt  release.txt  stammdaten.txt  startkladde.1  startkladde.sgml  styles.txt
doc/bedienungsanleitung/: startkladde_bedienungsanleitung.tex
doc/internal/: connection_fsm.fig  database.txt  databaseArchitecture.txt  databaseErrors.txt  databaseMigrations.txt  databaseOpen.txt  date.txt  db_change.fig  editierbar.txt  gui.txt  hotkeys.txt  importing.txt  logo.txt  migrations.txt  mysql.txt  release-checklist.txt  sk_user.txt  sk_web.txt  tests.txt  worker.txt
doc/uml/: DataStorage_state.uml  DataStorage_state.umlstm  Database.uml  Database.umlclass  MainWindow.uml  MainWindow.umlclass  MainWindow.xmi  database.xmi  objectList.uml  objectList.umlclass
plugins/: Makefile
plugins/data_format/: Makefile
plugins/info/: .sunsets.txt.swp  metar  pwd  pwd.rb  richtext  sunset_countdown.rb  sunsets.txt  system_info  test_richtext.rb  varlen  wind.rb  wind_generator
plugins/shell_info/: metar  wind
plugins/weather/: regenradar_wetter.com  regenradar_wetter.com_ani  regenradar_wetter.com_animation  regenradar_wetteronline.de  regenradar_wetteronline.de.rb  regenradar_wetteronline.de_ani  regenradar_wetteronline.de_animation.rb
script/: CppSegmenter1.rb  CppSegmenter2.rb  CppSegmenter3.rb  CppSegmenter4.rb  Scanner.rb  cpp_scanner.rb  find_missing_tr  find_missing_tr2.rb  generate_migration.rb  mock.rb  scanner.rb  test_cpp_scanner.rb  token.rb  update_current_schema.sh
script/client/: serial_send.rb  serialhandler.py
scripts/: sk_make_csv
src/: Condition.cpp  Condition.h  FlightList.cpp  FlightList.h  FlightReference.cpp  FlightReference.h  Longitude.cpp  Longitude.h  ObjectField.cpp  ObjectField.h  SkException.h  SkListWidget.cpp  SkListWidget.h  StorableException.h  WeatherDialog.cpp  WeatherDialog.h  accessor.h  acpiwidget.cpp  admin_functions.cpp  admin_functions.h  argument.cpp  argument.h  bordbuch.cpp  bordbuch.h  build.h.in  color.cpp  color.h  colors.h  condition_t.cpp  condition_t.h  dataTypes.cpp  dataTypes.h  data_types.cpp  data_types.h  db_column.h  db_event.cpp  db_event.h  db_proxy.cpp  db_proxy.h  db_table.h  (+119 more)
src/algorithms/: RectangleLayout.cpp  RectangleLayout.h
src/concurrent/: DefaultQThread.cpp  DefaultQThread.h  Returner.cpp  Returner.h  Waiter.cpp  WorkerThread.cpp  WorkerThread.h  synchronized.h  threadUtil.cpp  threadUtil.h
src/config/: Options.cpp  Options.h  Settings.cpp  Settings.h  options.cpp  options.h
src/container/: Maybe.cpp  Maybe.h  SkMultiHash.h  SortedSet.h  SortedSet_impl.h
src/data/: Csv.cpp  Csv.h
src/db/: AbstractDatabase.cpp  AbstractDatabase.h  DataStorage.cpp  DataStorage.h  DataStorageMonitor.h  DataStorageWorker.cpp  DataStorageWorker.h  Database.cpp  Database.h  DatabaseInfo.cpp  DatabaseInfo.h  DatabaseInterface.cpp  DatabaseInterface.h  DatabaseTask.cpp  DatabaseTask.h  DatabaseThread.cpp  DatabaseThread.h  DatabaseWorker.cpp  DatabaseWorker.h  DbColumn.cpp  DbColumn.h  DbEvent.cpp  DbEvent.h  DbManager.cpp  DbManager.h  DbTable.cpp  DbTable.h  DbWorker.cpp  DbWorker.h  OldDatabase.cpp  OldDatabase.h  OldDatabase_deconstruction.cpp  Query.cpp  Query.h  ThreadSafeDatabase.cpp  ThreadSafeDatabase.h  adminFunctions.cpp  adminFunctions.h  admin_functions.cpp  admin_functions.h  (+17 more)
src/documents/: LatexDocument.cpp  LatexDocument.h  Table.cpp  Table.h  latex_document.cpp  latex_document.h  table.cpp  table.h
src/flarm/: Flarm.cpp  Flarm.h  FlarmHandler.cpp  FlarmHandler.h  FlarmHandling.cpp  FlarmHandling.h  FlarmIdCheck.cpp  FlarmIdCheck.h  FlarmList.cpp  FlarmList.h  FlarmMap.cpp  FlarmMap.h  FlarmMap.ui  FlarmMapWidget.cpp  FlarmMapWidget.h  FlarmNetFile.cpp  FlarmNetFile.h  FlarmNetHandler.cpp  FlarmNetHandler.h  FlarmNetOverview.cpp  FlarmNetOverview.h  FlarmNetOverview.ui  FlarmNetRecord.cpp  FlarmNetRecord.h  FlarmNetRecordModel.cpp  FlarmNetRecordModel.h  FlarmRecord.cpp  FlarmRecord.h  FlarmRecordModel.cpp  FlarmRecordModel.h  FlarmWindow.cpp  FlarmWindow.h  FlarmWindow.ui  FlightLookup.cpp  FlightLookup.h  FlightResolver.cpp  FlightResolver.h  GprmcSentence.cpp  GprmcSentence.h  Kml.cpp  (+12 more)
src/graphics/: grid.cpp  grid.h
src/gui/: PasswordCheck.cpp  PasswordCheck.h  PasswordPermission.cpp  PasswordPermission.h  SkDialog.cpp  SkDialog.h  SkMainWindow.h  WidgetFader.cpp  WidgetFader.h  dialogs.cpp  dialogs.h  settings.h  sk_list_view_item.h  spacing.h
src/i18n/: LanguageChangeNotifier.cpp  LanguageChangeNotifier.h  LanguageConfiguration.cpp  LanguageConfiguration.h  TranslationManager.cpp  TranslationManager.h
src/io/: AnsiColors.cpp  SkProcess.cpp  SkProcess.h  TempDir.cpp  TempDir.h  colors.h  io.cpp  io.h  temp_dir.cpp  temp_dir.h
src/logging/: messages.cpp  messages.h
src/model/: Entity.cpp  Entity.h  Flight.cpp  Flight.h  FlightBase.cpp  FlightBase.h  Flight_Mode.cpp  Flight_Type.cpp  LaunchMethod.cpp  LaunchMethod.h  LaunchType.cpp  LaunchType.h  Person.cpp  Person.h  PersonModel.cpp  PersonModel.h  Plane.cpp  Plane.h  User.cpp  User.h  sk_flug.cpp  sk_flug.h  sk_flugzeug.cpp  sk_flugzeug.h  sk_person.cpp  sk_person.h  (+5 more)
test/: TestRunnerClient.h  mock_test.ts
translations/: startkladde_bork.ts  startkladde_de.ts  startkladde_nl.ts
version/: make_version  make_version.rb
webinterface/: .htaccess  sk_web.cgi  sk_web.css
(+582 files in other folders)
